--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="col-md-6 banner-desc lh-lg">
                   <h1 class="text-capitalize py-3 redressed">
                     Welcome to the official Restaurant website <br>
-                    depuis 2003
+                    Since 2003
                   </h1>
                   <p>
                     <button class="btn btn-order btn-lg me-5 rounded-0 merriweather">Commander maintenant</button>
